--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 5fr));
   min-height: 100vh;
-  grid-gap: 2rem;
+  grid-gap: 0.5rem;
 }
 
 .img-container {
@@ -35,6 +35,7 @@
   height: 100%;
   opacity: 0;
   pointer-events: none;
+  transition: 0.25s ease-out;
 }
 .modal.open {
   opacity: 1;
